<resources>
    <string name="app_name">Chatty</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="enter_your_details">Enter your Details</string>
    <string name="signout">Logout</string>
    <string name="type_your_message">type your message...</string>
    <string name="testing_msg">testing msg</string>
    <string name="seen">seen</string>
    <string name="send_message">Send Message</string>
    <string name="user_name">username</string>
    <string name="change_username">Change Username</string>
    <string name="logout">Logout</string>
    <string name="social_media">Other Social Media Accounts</string>
</resources>
