<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_dark"
    tools:context=".Activity.RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_register"
            android:background="@color/colorPrimary">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:layout_marginBottom="25dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#ffffff"/>

   <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/username_register"
        android:inputType="text"
        android:textColor="#ffffff"
       android:textColorHint="#ffffff"
       android:backgroundTint="#ffffff"
        android:hint="@string/username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/email_register"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:backgroundTint="#ffffff"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:backgroundTint="#ffffff"
        android:id="@+id/password_register"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_btn"
        android:background="@drawable/profile_view"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="30dp"/>

</LinearLayout>


    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:id="@+id/splashAnimation"
        android:layout_marginRight="-30dp"
        app:lottie_loop="true"
        app:lottie_fileName="data_man.json"
        app:lottie_autoPlay="true"/>

</RelativeLayout>