<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/welcome"
    tools:context=".Activity.WelcomeActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/welcome"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_welcome_btn"
        android:background="@drawable/profile_view"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="60dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_welcome_btn"
        android:background="@drawable/profile_view"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:layout_marginHorizontal="50dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="100dp"/>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/splashAnimation"
        app:lottie_loop="true"
        android:layout_marginBottom="-150dp"
        android:layout_marginLeft="100dp"
        app:lottie_fileName="data_welcome.json"
        app:lottie_autoPlay="true"/>

</LinearLayout>